# cpg-flow-seqr-loader

./: .pre-commit-config.yaml  Dockerfile  README.md  pull_request_template.md  pyproject.toml
.github/workflows/: dev_auto_build.yaml  docker.yaml  get_version.py  test.yaml
src/: ontology_to_biosample_mapping.json
src/cpg_seqr_loader/: __init__.py  alphagenome_config_template.toml  config_template.toml  first_workflow.py  full_workflow.py  run_workflow.py  stages.py  utils.py
src/cpg_seqr_loader/hail_scripts/: README.md  annotations.py  avi_fixer.py  normalisation_duplication_check.py  normilization_duplication_check.py  sparse_mt.py  variant_id.py  vcf.py  vep.py
src/cpg_seqr_loader/jobs/: AnnotateCohort.py  AnnotateDataset.py  AnnotateVcfsWithVep.py  AnnotatedDatasetMtToVcf.py  CombineGvcfsIntoVds.py  ConcatenateVcfFragmentsWithGcloud.py  CreateDenseMtFromVdsWithHail.py  CreateVdsFromGvcfsWithHailCombiner.py  DeleteCombinerTemp.py  ExportMtAsEsIndex.py  FindVarsofInterest.py  GatherTrainedVqsrSnpTranches.py  RunIndelVqsr.py  RunSnpVqsrOnFragments.py  SubsetDatasetMtByGenes.py  SubsetMtToDatasetWithHail.py  TrainVqsrIndels.py  TrainVqsrSnpModel.py  TrainVqsrSnpTranches.py  TrainVqsrSnps.py  __init__.py  alphagenome_var_expression_scanner.py
src/cpg_seqr_loader/scripts/: alphagenome_bedgraph_plotter.py  alphagenome_only_scores.py  alphagenome_splice_variant_scanner.py  alphagenome_splice_variant_scanner_mw.py  alphagenome_var_exp_script.py  alphagenome_var_score_and_plot.py  annotate_cohort.py  annotate_dataset.py  create_preset_intervals.py  densify_VDS_to_MT.py  filter_mt_to_vars_of_interest.py  mt_to_es.py  multi_scorer_extended_plot.py  mw_edit.py  quick_splice_scorer.py  run_combiner.py  sashimi_sep_plots.py  splice_scorer_extended_plot.py  subset_mt_for_vars_of_interest_alphagenome.py  subset_mt_to_dataset.py  test_densify_chr1.py  vcf_from_mt_subset.py  vep_json_to_ht.py  write_gcloud_compose_script.py  yo_dawg.sh
